kustomize/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 'cinematic/backend'
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "150m"
            memory: "128Mi"
      restartPolicy: Always
