kustomize/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend 
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: 'cinematic/frontend'
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "150m"
            memory: "128Mi"
      restartPolicy: Always
