kustomize/base/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
